# gptman

./: .coveragerc  .gitignore  CHANGELOGS.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gptman/: __init__.py  chat_shell.py  cli.py  cmd.py  contextmanagers.py  exceptions.py  main.py  prefixcmd.py  prompt.py
gptman/assistant/: __init__.py  cli.py  prompt.py  shell.py
gptman/cli/: __init__.py  assistant.py
tests/: test_cmd.py  test_contextmanagers.py  test_main.py  test_prefixcmd.py  test_prompt_file.py
tests/fixture/: test_prompt.md
